--- a/index.html
+++ b/index.html
@@ -12,17 +12,21 @@
     </header>
 
     <main>
+        <header>
+
+        </header>
+        <img src="./img/salmon.png" alt="fish photo">
         <h2>
+            <a href="./sales.html">Sales Date</a>
 
         </h2>
 
-        <div id="salmon">
             
         </div>
     </main>
     <footer>
 
     </footer>
-    <script src="./js/app.js"></script>
+
 </body>
 </html>
