--- a/sales.html
+++ b/sales.html
@@ -25,7 +25,7 @@
 
     </main>
     <footer>
-
+        <a href="./index.html" style="color: rgb(250, 92, 81);font-size:50px;font-family: 'Times New Roman', Times, serif;"> Sales Cookies </a>
     </footer>
     <script src="./js/app.js"></script>
 
