--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
         <div>
         <section class="sec">
             <div>
-
+                <!-- <fieldset>
+                    <legend>Cookies</legend>
+                    <form id='cooki' >
+                        <label for="cname">Location</label>
+                        <input type="text" id="cname" name="cmane">
+                        <label for="min">Min Cust.</label>
+                        <input type="number" id="min" name="min">
+                        <label for="max">Max Cust.</label>
+                        <input type="number" id="max" name="max">
+                        <label for="avg">Avg. Cookies</label>
+                        <input type="number" id="avg" name="avg">
+                        <button type="submit">Calc.</button>
+                    </form>
+                </fieldset> -->
             </div>
             
             <div>
@@ -67,4 +80,5 @@
     </footer>
 
 </body>
+<script src="js/forIndex.js"></script>
 </html>
